# bibletimemobile

./: .gitignore  CMakeLists.txt  README.build  README.md
.tx/: config
android/: AndroidManifest.xml
android/res/drawable/: splashscreen.xml
cmake/: BTApplication.cmake  BtmSources.cmake  FindCLucene.cmake  FindSword.cmake
i18n/messages/: mobile_ui.ts  mobile_ui_C.ts  mobile_ui_ar.ts  mobile_ui_cs.ts  mobile_ui_da.ts  mobile_ui_de.ts  mobile_ui_en_GB.ts  mobile_ui_es.ts  mobile_ui_et.ts  mobile_ui_fi.ts  mobile_ui_fr.ts  mobile_ui_hu.ts  mobile_ui_it.ts  mobile_ui_ja.ts  mobile_ui_ko.ts  mobile_ui_lt.ts  mobile_ui_pl.ts  mobile_ui_pt.ts  mobile_ui_pt_BR.ts  mobile_ui_ru.ts  mobile_ui_sk.ts  mobile_ui_zh_TW.ts
src/mobile/: ChangeLog  bibletime.cpp  bibletime.h  bibletimeapp.cpp  btm.qrc  btmmain.cpp
src/mobile/config/: btmconfig.cpp
src/mobile/display-templates/: Basic.tmpl
src/mobile/models/: documentmodel.cpp  documentmodel.h  worksmodel.cpp  worksmodel.h  workssortfiltermodel.cpp  workssortfiltermodel.h
src/mobile/qml/: About.qml  AddBookmark.qml  AddFolder.qml  Back.qml  BookIcon.qml  BookmarkFolders.qml  BookmarkManager.qml  BookshelfManager.qml  BookshelfManagerPages.qml  BtButton.qml  BtComboBox.qml  BtmButton.qml  ChooseDocumentsPage.qml  ChooseLanguagesPage.qml  ChooseReference.qml  ChooseSourcesPage.qml  ContinueDialog.qml  CopyVerses.qml  CopyVersesDialog.qml  DebugDialog.qml  DefaultDoc.qml  ExpandArrow.qml  FinishedPage.qml  Folder.qml  FontSizeSlider.qml  GridChooser.qml  GridChooserButton.qml  InformationDialog.qml  InstallAutomatic.qml  InstallDocumentsPage.qml  InstallManagerChooser.qml  KeyNameChooser.qml  Left.qml  LeftArrow.qml  ListSelectView.qml  ListTextView.qml  ListWorksView.qml  MagView.qml  MainToolbar.qml  MenuButton.qml  (+37 more)
src/mobile/qml/bookshelfmanager/: BookshelfManager.qml  BookshelfManagerPages.qml  ChooseDocumentsPage.qml  ChooseLanguagePage.qml  ChooseLibraryPage.qml  InstallDocumentsPage.qml  InstallPage.qml  RemoveDocumentsPage.qml  TaskMenu.qml  TaskPage.qml  UpdateDocumentsPage.qml  UpdateLibrariesPage.qml  UpdateSourcesPage.qml  UpdatingDocumentsPage.qml  UpdatingLibrariesPage.qml
src/mobile/ui/: btbookmarkinterface.cpp  btbookmarkinterface.h  btmmoduletextfilter.cpp  btmmoduletextfilter.h  btsearchinterface.cpp  btsearchinterface.h  btstyle.cpp  btstyle.h  btwindowinterface.cpp  btwindowinterface.h  chooserinterface.cpp  chooserinterface.h  colormanager.cpp  colormanager.h  colormanagermobile.cpp  colormanagermobile.h  configinterface.cpp  configinterface.h  fileinterface.cpp  fileinterface.h  installinterface.cpp  installinterface.h  moduleinterface.cpp  moduleinterface.h  sessioninterface.cpp  sessioninterface.h
src/mobile/util/: directory.cpp
